refactor(EUDPA-35): group notification controller/service tests with @Nested
The two notification test files each had a single section-divider for
findByRef amid otherwise-flat tests. Translating just that one section
would have left an awkward mix, so group the whole file by endpoint
instead — same convention as the other test files updated in this
branch:

- NotificationControllerTest → PostNotification, FindAll, Delete,
  FindByRef, FindAllReferenceNumbers
- NotificationServiceTest → SaveOriginOfImport, FindAll,
  FindAllReferenceNumbers, DeleteByReferenceNumbers, FindByRef

Test bodies unchanged. Also fixed the import ordering in
NotificationControllerTest (static imports moved to the canonical first
group).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>